# ag-bridge

./: .gitignore  .vscodeignore  CHANGELOG.md  LICENSE  README.md  README.zh-CN.md  extension.cjs  package-lock.json  package.json  tsconfig.json
.github/workflows/: ci.yml  release-openvsx.yml
docs/: api.md  architecture.md  build.md  node-cli.md  python-cli.md  接口文档.md  构建与使用.md  设计方案.md
python/: README.md  pyproject.toml
python/src/ag_bridge_client/: __init__.py  cli.py  client.py  interactive.py
scripts/: package-cli-binary.mjs
src/: bridge-session.ts  cli.ts  discovery.ts  extension.ts  http-server.ts  model.ts  persistence.ts  runtime.ts  types.ts
