[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ag-bridge-client"
version = "0.2.1"
description = "Python client for the local AG Bridge HTTP API"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
ag-bridge-py = "ag_bridge_client.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
